Fix java 17