@@ -43,6 +43,10 @@ description = "libnetty/Example"
 tasks.test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+    jvmArgs = listOf(
+        "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+        "--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
+    )
 }
 
 publishing {
